# python-notes

./: pyproject.toml
notebooks/: Scratch.ipynb  python-pocket-reference.ipynb
